package bank;

/**
 *
 */
public interface CalculateBill {
    /**
     * calculates Amount
     * @return double of calculated Amount
     */
    double calculate();
}
